<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dykestra</string>

    <string name="main_drawer_close_description" translatable="false"></string>
    <string name="main_drawer_open_description" translatable="false"></string>
    <string name="main_drawer_reports_name">Reports</string>
    <string name="main_drawer_solved_name">Solved</string>
    <string name="main_drawer_dykes_name">Dykes</string>
    <string name="main_drawer_profile_name">Profile</string>
    <string name="main_drawer_settings_name">Settings</string>
    <string name="main_drawer_anonymous_notice">Go to Profile to log in</string>

    <string name="main_sync_in_progress_notice">Sync in progress…</string>
    <string name="main_network_connection_required_notice">You need a network connection to do this</string>
    <string name="main_no_internet_notice">You seem to be offline. Most of the app\'s functionality has been disabled.</string>

    <string name="main_tab_reports_name">Reports</string>
    <string name="main_tab_dykes_name">Dykes</string>

    <string name="list_offline_notice">There is no cached data and the server couldn\'t be reached.</string>

    <string name="create_report_location_header">Location of this report</string>
    <string name="create_report_information_header">Information about this report</string>
    <string name="create_report_damage_header">Which type of damage occurred?</string>

    <string name="create_report_position_title">Position of damage</string>
    <string name="create_report_location_title">Position of reporter</string>
    <string name="create_report_title">Create new report</string>
    <string name="create_report_dyke_title">Damaged dyke</string>
    <string name="create_report_type_title">Report type</string>
    <string name="create_report_waterloss_title">Water loss</string>
    <string name="create_report_watercondition_title">Water condition</string>
    <string name="create_report_leakagetype_title">Leakage type</string>
    <string name="create_report_deformationtype_title">Deformation type</string>
    <string name="create_report_no_session_notice">You need to be logged in, in order to send reports.</string>
    <string name="create_report_title_missing_notice">You need to give this report a title</string>
    <string name="create_report_image_title">Image</string>
    <string name="create_report_upload_notice">Uploading report. Please wait…</string>
    <string name="create_report_finished_notice">Report successfully uploaded.</string>

    <string name="profile_title">Profile</string>
    <string name="profile_login">Login</string>
    <string name="profile_login_notice">You need to be logged in to create reports</string>
    <string name="profile_username_hint">Username</string>
    <string name="profile_password_hint">Password</string>
    <string name="profile_empty_fields_notice">You need to fill in all fields</string>
    <string name="profile_user_unknown_notice">User could not be found</string>
    <string name="profile_password_incorrect_notice">Password incorrect</string>
    <string name="profile_login_successful_notice">Login successful</string>
    <string name="profile_unknown_error_notice">An unexpected error occurred. Please try again later.</string>

    <string name="settings_title">Settings</string>

    <string-array name="report_spinner_position_keys">
        <item>outer-slope</item>
        <item>crown</item>
        <item>inner-slope</item>
        <item>inner-berm</item>
        <item>dyke-defense-road</item>
        <item>moat</item>
    </string-array>

    <string-array name="report_spinner_position_values">
        <item>Outer slope (A)</item>
        <item>Dyke crown (B)</item>
        <item tools:ignore="TypographyOther">Inner slope (C)</item>
        <item>Inner berm (D)</item>
        <item>Dyke defense road (E)</item>
        <item>Moat (F)</item>
        <item>Other</item>
    </string-array>

    <string-array name="report_spinner_type_keys">
        <item>initial</item>
        <item>followup</item>
    </string-array>

    <string-array name="report_spinner_type_values">
        <item>Initial</item>
        <item>Follow-up</item>
    </string-array>

    <string-array name="report_spinner_waterloss_keys">
        <item>isolated</item>
        <item>punctually</item>
        <item>areally</item>
    </string-array>

    <string-array name="report_spinner_waterloss_values">
        <item>Moist area</item>
        <item>Punctually</item>
        <item>Areally</item>
        <item>Other</item>
    </string-array>

    <string-array name="report_spinner_watercondition_keys">
        <item>clear</item>
        <item>muddy</item>
        <item>sedimented</item>
    </string-array>

    <string-array name="report_spinner_watercondition_values">
        <item>Clear</item>
        <item>Muddy</item>
        <item>Sedimented</item>
        <item>Other</item>
    </string-array>

    <string-array name="report_spinner_leakagetype_keys">
        <item>stagnant</item>
        <item>flowing</item>
        <item>effervescent</item>
    </string-array>

    <string-array name="report_spinner_leakagetype_values">
        <item>Stagnant</item>
        <item>Flowing</item>
        <item>Effervescent</item>
        <item>Other</item>
    </string-array>

    <string-array name="report_spinner_deformationtype_keys">
        <item>upheavel</item>
        <item>bagging</item>
        <item>slipped-topsoil</item>
        <item>shift</item>
        <item>slipped-slope</item>
    </string-array>

    <string-array name="report_spinner_deformationtype_values">
        <item>Upheavel / Raising</item>
        <item>Bagging</item>
        <item>Slipped topsoil</item>
        <item>Shift / Slide</item>
        <item>Slipped slope</item>
        <item>Other</item>
    </string-array>
    <string name="create_report_position_hint">Describe the position of the damage</string>
    <string name="create_report_waterloss_hint">Describe the water loss</string>
    <string name="create_report_watercondition_hint">Describe the water condition</string>
    <string name="create_report_leakagetype_hint">Describe the leakage type</string>
    <string name="create_report_deformationtype_hint">Describe the deformation type</string>
    <string name="create_report_title_hint">Report title</string>

    <string name="settings_general_title">General</string>
    <string name="settings_default_dyke_title">Default dyke</string>
    <string name="settings_default_dyke_dialog_title">Choose dyke</string>
    <string name="settings_default_dyke_summary">Choose the default dyke for new reports</string>
    <string name="settings_sync_title">Sync</string>
    <string name="settings_sync_on_startup_title">Sync on startup</string>
    <string name="settings_sync_on_startup_summary">Synchronizes report and dyke data on startup when a network is available</string>
    <string name="settings_sync_now_title">Sync now</string>
    <string name="settings_sync_now_summary">Click to manually synchronize all reports and dykes</string>
    <string name="settings_about_title">About</string>
    <string name="settings_about_creator_title">Creator</string>
    <string name="settings_about_creator_summary">FESTIVAL Development</string>
    <string name="settings_about_version_title">App version</string>
    <string name="settings_about_version_summary" translatable="false">1.2.5</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
