<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_general_title">
        <ListPreference
                android:key="default-dyke"
                android:icon="@drawable/ic_waves_black_24dp"
                android:title="@string/settings_default_dyke_title"
                android:summary="@string/settings_default_dyke_summary"
                android:dialogTitle="@string/settings_default_dyke_dialog_title"
                android:entries="@array/report_spinner_deformationtype_values"
                android:entryValues="@array/report_spinner_deformationtype_values"
        />
    </PreferenceCategory>

    <!-- <PreferenceCategory android:title="Connectivity">
        <SwitchPreference
                android:key="use-cellular-for-positioning"
                android:icon="@drawable/ic_my_location_black_24dp"
                android:title="Cellular positioning"
                android:summary="Support position determination with cellular network"
        />
    </PreferenceCategory> -->

    <PreferenceCategory android:title="@string/settings_sync_title">
        <SwitchPreference
                android:key="sync-data-on-startup-if-network-available"
                android:icon="@drawable/ic_sync_black_24dp"
                android:title="@string/settings_sync_on_startup_title"
                android:summary="@string/settings_sync_on_startup_summary"
        />
        <Preference
                android:key="sync-data-now"
                android:icon="@drawable/ic_update_black_24dp"
                android:title="@string/settings_sync_now_title"
                android:summary="@string/settings_sync_now_summary"
        />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_about_title">
        <Preference
                android:title="@string/settings_about_creator_title"
                android:summary="@string/settings_about_creator_summary"
        />

        <Preference
                android:title="@string/settings_about_version_title"
                android:summary="@string/settings_about_version_summary"
        />
    </PreferenceCategory>
</PreferenceScreen>