<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
            android:id="@+id/nav_group_1"
            android:checkableBehavior="single"
    >
        <item
                android:id="@+id/nav_reports"
                android:icon="@drawable/ic_report_black_24dp"
                android:title="@string/main_drawer_reports_name"
        />

        <item
                android:id="@+id/nav_solved"
                android:icon="@drawable/ic_check_black_24dp"
                android:title="@string/main_drawer_solved_name"
        />

        <item
                android:id="@+id/nav_dykes"
                android:icon="@drawable/ic_waves_black_24dp"
                android:title="@string/main_drawer_dykes_name"
        />
    </group>

    <group
        android:checkableBehavior="single"
    >
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_view_list_black_24dp"
                android:title="Meldungen und Deiche"
        />

        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/main_drawer_profile_name"
        />

        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/main_drawer_settings_name"
        />
    </group>

</menu>