<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateReportActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/create_report_toolbar"
            android:background="?attr/colorPrimary"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    />

    <ScrollView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/create_report_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
    >

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
        >
            <EditText
                    android:id="@+id/create_report_title_input"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/create_report_title_hint"
            />

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/create_report_type_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            />
            <Spinner
                    android:id="@+id/create_report_type_spinner"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:spinnerMode="dialog"
            />

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/create_report_waterloss_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            />
            <Spinner
                    android:id="@+id/create_report_waterloss_spinner"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:spinnerMode="dialog"
            />
            <EditText
                    android:id="@+id/create_report_waterloss_input"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="12dp"
                    android:hint="@string/create_report_waterloss_hint"
                    android:visibility="gone"
            />

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/create_report_watercondition_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            />
            <Spinner
                    android:id="@+id/create_report_watercondition_spinner"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:spinnerMode="dialog"
            />
            <EditText
                    android:id="@+id/create_report_watercondition_input"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="12dp"
                    android:hint="@string/create_report_watercondition_hint"
                    android:visibility="gone"
            />

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/create_report_leakagetype_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            />
            <Spinner
                    android:id="@+id/create_report_leakagetype_spinner"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:spinnerMode="dialog"
            />
            <EditText
                    android:id="@+id/create_report_leakagetype_input"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="12dp"
                    android:hint="@string/create_report_leakagetype_hint"
                    android:visibility="gone"
            />

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/create_report_deformationtype_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            />
            <Spinner
                    android:id="@+id/create_report_deformationtype_spinner"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:spinnerMode="dialog"
            />
            <EditText
                    android:id="@+id/create_report_deformationtype_input"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="12dp"
                    android:hint="@string/create_report_deformationtype_hint"
                    android:visibility="gone"
            />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_send_white_24dp"
    />

</android.support.constraint.ConstraintLayout>