<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:background="?attr/colorPrimary"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    />

    <LinearLayout
            android:id="@+id/profile_head"
            android:layout_height="200dp"
            android:layout_width="match_parent"
            android:background="?attr/colorPrimary"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/profile_toolbar"
    >

        <ImageView
                android:id="@+id/profile_my_avatar"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:srcCompat="@mipmap/ic_launcher_round"
        />

        <TextView
                android:id="@+id/profile_my_username"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:paddingTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        />

        <TextView
                android:id="@+id/profile_my_email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
        />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/profile_subbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="?attr/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="16dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_constraintTop_toBottomOf="@id/profile_head"
    >
        <TextView
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/profile_login_notice"
                android:textColor="@android:color/white"
        />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/profile_inputs"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/profile_subbar"
            app:layout_constraintBottom_toBottomOf="parent">
        <EditText
                android:id="@+id/profile_username"
                android:hint="@string/profile_username_hint"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="12dp"
                android:layout_width="match_parent"
                android:singleLine="true"
        />

        <EditText
                android:id="@+id/profile_password"
                android:hint="@string/profile_password_hint"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_width="match_parent"
                android:singleLine="true"
        />

        <Button
                android:id="@+id/profile_login_button"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="12dp"
                android:layout_width="match_parent"
                android:text="@string/profile_login"
        />

        <TextView
                android:id="@+id/profile_register_link"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
        />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>